# micronurse-iot-sol

./: .gitignore  README.md  install_micronurse_service.sh  micronurse.service  package.json  start_micronurse.sh  sync.sh
micronurse_center/: .id  config.json
micronurse_center/appbundle/HOPE_APP_609663c0_18fd_11e6_8940_a595a51cb4dc/: app.json
micronurse_center/appbundle/HOPE_APP_609663c0_18fd_11e6_8940_a595a51cb4dc/graphs/: GRAPH_609922e0-18fd-11e6-ae0d-83733454c9c6.json
micronurse_center/appbundle/HOPE_APP_609663c0_18fd_11e6_8940_a595a51cb4dc/uis/: UI_60997100-18fd-11e6-ae0d-83733454c9c6.json
micronurse_center/appbundle/HOPE_APP_61657db0_0fb4_11e6_b548_336dbc6c3857/: app.json
micronurse_center/appbundle/HOPE_APP_61657db0_0fb4_11e6_b548_336dbc6c3857/graphs/: GRAPH_8c6a8b90-12a7-11e6-9735-a5ff621979a6.json  GRAPH_c867ec90-0fb5-11e6-bd3c-efc624630bec.json
micronurse_center/appbundle/HOPE_APP_61657db0_0fb4_11e6_b548_336dbc6c3857/uis/: UI_a52a82f0-0fb6-11e6-992d-9b1526a45bb1.json
micronurse_center/appbundle/HOPE_APP_96e357b0_0fa9_11e6_9807_abec83c8fa4b/: app.json
micronurse_center/appbundle/HOPE_APP_96e357b0_0fa9_11e6_9807_abec83c8fa4b/graphs/: GRAPH_96e812a0-0fa9-11e6-b453-bbe2a62e4ca0.json  GRAPH_fcaa6af0-0fab-11e6-89c2-a3567a4d11f1.json
micronurse_center/appbundle/HOPE_APP_96e357b0_0fa9_11e6_9807_abec83c8fa4b/uis/: UI_13af0e90-0fac-11e6-89c2-a3567a4d11f1.json  UI_96e860c0-0fa9-11e6-b453-bbe2a62e4ca0.json
micronurse_center/appbundle/HOPE_APP_f0338ec0_1b16_11e6_888e_1fb72398316c/: app.json
micronurse_center/appbundle/HOPE_APP_f0338ec0_1b16_11e6_888e_1fb72398316c/graphs/: GRAPH_1a3b7200-1b17-11e6-b6d6-db4f64c5a32a.json  GRAPH_82b73f70-9c46-11e6-af05-254bb96dacd9.json  GRAPH_c2ac7610-1ca6-11e6-9696-b5de9897aecc.json  GRAPH_f24504a0-1dbe-11e6-a05e-ef3190d244e4.json  GRAPH_ff7b8db0-2101-11e6-a9bf-6539c8999576.json
micronurse_center/appbundle/HOPE_APP_f0338ec0_1b16_11e6_888e_1fb72398316c/uis/: UI_2337b530-1b17-11e6-b6d6-db4f64c5a32a.json  UI_2b410a00-2103-11e6-a9bf-6539c8999576.json  UI_2fd8dda0-23f9-11e7-86a3-85be6a9192d8.json  UI_e078a290-1ca6-11e6-9696-b5de9897aecc.json  UI_f039d050-1b16-11e6-b6d6-db4f64c5a32a.json
micronurse_center/appbundle/micronurse/: app.json
micronurse_center/appbundle/micronurse/graphs/: workflow_micronurse.json
micronurse_center/appbundle/micronurse/uis/: ui_micronurse.json
micronurse_hub/: config.json  init.js  stop.js
micronurse_hub/thing_bundle/HumidiometerA/: thing.json
micronurse_hub/thing_bundle/HumidiometerA/report/: kernel.js  pause.js  resume.js  service.json  start.js  stop.js
micronurse_hub/thing_bundle/ThermometerA/: thing.json
micronurse_hub/thing_bundle/ThermometerA/report/: kernel.js  pause.js  resume.js  start.js  stop.js
micronurse_hub/thing_bundle/feverThermometer/: thing.json
micronurse_hub/thing_bundle/feverThermometer/report/: resume.js  start.js  stop.js
micronurse_hub/thing_bundle/fever_thermometer/: thing.json
micronurse_hub/thing_bundle/fever_thermometer/report/: after_resume.js  kernel.js  pause.js  resume.js  service.json  start.js  stop.js
micronurse_hub/thing_bundle/gps/: thing.json
micronurse_hub/thing_bundle/gps/locate/: after_resume.js  kernel.js  pause.js  resume.js  service.json  start.js  stop.js
micronurse_hub/thing_bundle/humidometer/: thing.json
micronurse_hub/thing_bundle/humidometer_thermometer/: thing.json
micronurse_hub/thing_bundle/infrared_transducer/: thing.json
micronurse_hub/thing_bundle/mqtt_broker/: thing.json
micronurse_hub/thing_bundle/pulseTransduce/: thing.json
micronurse_hub/thing_bundle/pulse_transduce/: thing.json
micronurse_hub/thing_bundle/pulse_transducer/: thing.json
micronurse_hub/thing_bundle/push_touch_button/: thing.json
micronurse_hub/thing_bundle/smoke_transducer/: thing.json
micronurse_hub/thing_bundle/smoketransducer/: thing.json
micronurse_hub/thing_bundle/thermometer/: thing.json
micronurse_hub/thing_bundle/turgoscope/: thing.json
micronurse_hub/thing_bundle/webserver/: login.js  logout.js  micronurse_api_request.js  thing.json
micronurse_sensor/: build.sh
micronurse_sensor/dht11-sensor/: CMakeLists.txt  package.json
micronurse_sensor/dht11-sensor/src/: DHT11.cc  DHT11.h  DHT11NodeObject.cc  DHT11NodeObject.h  DHT11Test.cc  dht11_sensor.cpp  dht11_sensor.h  dht11_sensor_node.cpp  dht11_test.cpp
micronurse_sensor/dht11sensor/: CMakeLists.txt  package.json
micronurse_sensor/dht11sensor/src/: dht11sensor.cpp  dht11sensor.h  dht11sensor_node.cpp  dht11test.cpp
micronurse_sensor/dht22-sensor/: CMakeLists.txt  package.json
micronurse_sensor/dht22-sensor/src/: DHT22.cc  DHT22.h  DHT22NodeObject.cc  DHT22NodeObject.h  DHT22Test.cc
micronurse_sensor/ds18b20-sensor/: CMakeLists.txt  package.json
micronurse_sensor/ds18b20-sensor/src/: DS18B20.cc  DS18B20.h  DS18B20NodeObject.cc  DS18B20NodeObject.h  DS18B20Test.cc
micronurse_sensor/heartrate-sensor/: CMakeLists.txt  package.json
micronurse_sensor/heartrate-sensor/src/: DFRobotHeartrate.cc  DFRobotHeartrate.h  DFRobotHeartrateNodeObject.cc  DFRobotHeartrateNodeObject.h  DFRobotHeartrateTest.cc  heartrate_sensor.cpp  heartrate_sensor.h  heartrate_sensor_node.cpp  heartrate_sesnor_test.cpp
micronurse_sensor/mq2-sensor/: CMakeLists.txt  package.json
micronurse_sensor/mq2-sensor/src/: MQ2.cc  MQ2.h  MQ2NodeObject.cc  MQ2NodeObject.h  MQ2Test.cc  mq2_sensor.cpp  mq2_sensor.h  mq2_sensor_node.cpp  mq2_test.cpp
micronurse_sensor/mq2sensor/: CMakeLists.txt  package.json
micronurse_sensor/mq2sensor/src/: mq2sensor.cpp  mq2sensor.h  mq2sensor_node.cpp
micronurse_sensor/pir-sensor/: CMakeLists.txt  package.json
micronurse_sensor/pir-sensor/src/: pir_sensor.cpp  pir_sensor.h  pir_sensor_node.cpp
micronurse_ui/: buildui.sh
micronurse_ui/ui-dev/: .bowerrc  bower.json
micronurse_ui/ui-user/: bower.json
micronurse_ui/ui-widgets/: index.js  package.json  plugins-specs.json  specs.js
micronurse_ui/ui-widgets/widgets-jsx/: button.js  gauge.js  micronurse_account.js  micronurse_digiclock.js  micronurse_map.js  micronurse_single_line_text.js
(+98 files in other folders)
